@@ -1,4 +1,5 @@
 Changes in current version:
- o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.  
+ o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
  o demote most http warnings to debug messages
  o Fix Solaris compilation; from Magne Mahre
+ o Add a "Date" header to HTTP responses, as required by HTTP 1.1.
